--- a/StoreSales/StoreSales_Competition2.ipynb
+++ b/StoreSales/StoreSales_Competition2.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "https://www.kaggle.com/competitions/store-sales-time-series-forecasting\n",
     "\n",
-    "***In this project, forecasting will be processed with considering different features(promotion, holiday)<br>\n",
+    "***In this project, forecasting will be processed with considering 'promotion' featureas well.<br>\n",
     "Also, we will implement forecasting per each product family***"
    ]
   },
@@ -44,7 +44,233 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Preprocessing"
+    "### Blue print\n",
+    "\n",
+    "1. Investigate the dataset. (unique values, data type etc)\n",
+    "2. How to numerize *store_nbr* and *family* features?\n",
+    "3. How to convert *date* to time features?\n",
+    "4. Split *train* dataset to *ourtrain* and *ourtest* for pre-validation.\n",
+    "5. Apply various ML models. (Trend, Periodtogram, Cycles, Hybrid)\n",
+    "6. Choose the best model and apply to our test set.\n",
+    "7. Apply and make csv file for submition.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import packages\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "import datetime\n",
+    "import math\n",
+    "from statsmodels.tsa.deterministic import CalendarFourier, DeterministicProcess\n",
+    "\n",
+    "# Ignore Future Warning\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load dataset\n",
+    "train = pd.read_csv('train.csv', parse_dates=[\"date\"])\n",
+    "test = pd.read_csv('test.csv', parse_dates=[\"date\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>family</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AUTOMOTIVE</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BABY CARE</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BEAUTY</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BEVERAGES</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BOOKS</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000883</th>\n",
+       "      <td>3000883</td>\n",
+       "      <td>2017-08-15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>POULTRY</td>\n",
+       "      <td>438.133</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000884</th>\n",
+       "      <td>3000884</td>\n",
+       "      <td>2017-08-15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>PREPARED FOODS</td>\n",
+       "      <td>154.553</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000885</th>\n",
+       "      <td>3000885</td>\n",
+       "      <td>2017-08-15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>PRODUCE</td>\n",
+       "      <td>2419.729</td>\n",
+       "      <td>148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000886</th>\n",
+       "      <td>3000886</td>\n",
+       "      <td>2017-08-15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>SCHOOL AND OFFICE SUPPLIES</td>\n",
+       "      <td>121.000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3000887</th>\n",
+       "      <td>3000887</td>\n",
+       "      <td>2017-08-15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>SEAFOOD</td>\n",
+       "      <td>16.000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3000888 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              id       date  store_nbr                      family     sales  \\\n",
+       "0              0 2013-01-01          1                  AUTOMOTIVE     0.000   \n",
+       "1              1 2013-01-01          1                   BABY CARE     0.000   \n",
+       "2              2 2013-01-01          1                      BEAUTY     0.000   \n",
+       "3              3 2013-01-01          1                   BEVERAGES     0.000   \n",
+       "4              4 2013-01-01          1                       BOOKS     0.000   \n",
+       "...          ...        ...        ...                         ...       ...   \n",
+       "3000883  3000883 2017-08-15          9                     POULTRY   438.133   \n",
+       "3000884  3000884 2017-08-15          9              PREPARED FOODS   154.553   \n",
+       "3000885  3000885 2017-08-15          9                     PRODUCE  2419.729   \n",
+       "3000886  3000886 2017-08-15          9  SCHOOL AND OFFICE SUPPLIES   121.000   \n",
+       "3000887  3000887 2017-08-15          9                     SEAFOOD    16.000   \n",
+       "\n",
+       "         onpromotion  \n",
+       "0                  0  \n",
+       "1                  0  \n",
+       "2                  0  \n",
+       "3                  0  \n",
+       "4                  0  \n",
+       "...              ...  \n",
+       "3000883            0  \n",
+       "3000884            1  \n",
+       "3000885          148  \n",
+       "3000886            8  \n",
+       "3000887            0  \n",
+       "\n",
+       "[3000888 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train[id]"
    ]
   },
   {
@@ -52,15 +278,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "hash": "1945a49d8267038c199a72e8f61b6bfcbb9f4626ddb3ddff4ec56a3f45e14a7a"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -74,7 +302,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
