--- a/StoreSales/StoreSales_Competition2.ipynb
+++ b/StoreSales/StoreSales_Competition2.ipynb
@@ -270,22 +270,155 @@
     }
    ],
    "source": [
-    "train[id]"
+    "train"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data investigation."
+    "#### - Error function : \n",
+    "$\\sqrt{ \\frac{1}{n} \\sum_{i=1}^n \\left(\\log (1 + \\hat{y}_i) - \\log (1 + y_i)\\right)^2}$\n",
+    "\n",
+    "𝑛 is the total number of instances,<br>\n",
+    "𝑦̂ 𝑖 is the predicted value of the target for instance (i),<br>\n",
+    "𝑦𝑖 is the actual value of the target for instance (i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Error Function (RMSLE)\n",
+    "def error(y_p, y_t):\n",
+    "    pred_log = np.array([math.log(i+1) for i in np.nditer(y_p)])\n",
+    "    act_log = np.array([math.log(i+1) for i in np.nditer(y_t)])\n",
+    "    dum_error = sum((pred_log - act_log)**2)/len(pred_log)\n",
+    "    linear_error = np.power(dum_error, 1/2)\n",
+    "    return round(linear_error, 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Data investigation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - train dataset\n",
+    "* shape : 3000888 × 6\n",
+    "* null : none\n",
+    "<br><br>\n",
+    "* *date* : timestamp. 2013-01-01 ~ 2017-08-15\n",
+    "* *store_nbr* : numpy. 1 ~ 54\n",
+    "* *family* : str. ['AUTOMOTIVE', 'BABY CARE', 'BEAUTY', 'BEVERAGES', 'BOOKS',\n",
+    "       'BREAD/BAKERY', 'CELEBRATION', 'CLEANING', 'DAIRY', 'DELI', 'EGGS',\n",
+    "       'FROZEN FOODS', 'GROCERY I', 'GROCERY II', 'HARDWARE',\n",
+    "       'HOME AND KITCHEN I', 'HOME AND KITCHEN II', 'HOME APPLIANCES',\n",
+    "       'HOME CARE', 'LADIESWEAR', 'LAWN AND GARDEN', 'LINGERIE',\n",
+    "       'LIQUOR,WINE,BEER', 'MAGAZINES', 'MEATS', 'PERSONAL CARE',\n",
+    "       'PET SUPPLIES', 'PLAYERS AND ELECTRONICS', 'POULTRY',\n",
+    "       'PREPARED FOODS', 'PRODUCE', 'SCHOOL AND OFFICE SUPPLIES',\n",
+    "       'SEAFOOD']\n",
+    "* *sales* : numpy. 0 ~ 124717\n",
+    "* *onpromotion* : numpy. 0 ~ 741\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### - Correlation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>store_nbr</th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000301</td>\n",
+       "      <td>0.085784</td>\n",
+       "      <td>0.206260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>store_nbr</th>\n",
+       "      <td>0.000301</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.041196</td>\n",
+       "      <td>0.007286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sales</th>\n",
+       "      <td>0.085784</td>\n",
+       "      <td>0.041196</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.427923</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>onpromotion</th>\n",
+       "      <td>0.206260</td>\n",
+       "      <td>0.007286</td>\n",
+       "      <td>0.427923</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   id  store_nbr     sales  onpromotion\n",
+       "id           1.000000   0.000301  0.085784     0.206260\n",
+       "store_nbr    0.000301   1.000000  0.041196     0.007286\n",
+       "sales        0.085784   0.041196  1.000000     0.427923\n",
+       "onpromotion  0.206260   0.007286  0.427923     1.000000"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check correlation\n",
+    "train.corr()"
+   ]
   },
   {
    "cell_type": "markdown",
